tests/macro-tests/cases/widget_new/unknown_special_value.stderr
error: unknown special value, expected `unset!`
 --> cases/widget_new/unknown_special_value.rs:7:18
  |
7 |         margin = foo!;
  |                  ^^^

warning: unused import: `layout::margin`
 --> cases/widget_new/unknown_special_value.rs:1:16
  |
1 | use zng::{APP, layout::margin, widget::Wgt};
  |                ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
